@startuml

title __POLYMORPHISM's Class Diagram__\n

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.Addition {
          ~ sum()
          ~ sum()
          ~ sum()
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.Bus {
          + showMe()
          + specificMethod()
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.ChildClass {
          + showMe()
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.CompileTimePolymorphism {
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.DemoCompileTimePolymorphism {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.DemoRuntimePolymorphism {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.DemoUpDownCasting {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.ParentClass {
          + doNotChangeMe()
          + showMe()
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.RuntimePolymorphism {
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.Train {
          + showMe()
          + specificMethod()
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.UpDownCasting {
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      class oopPrinciples.polymorphism.Vehicle {
          + showMe()
      }
    }
  }
  

  oopPrinciples.polymorphism.Bus -up-|> oopPrinciples.polymorphism.Vehicle
  oopPrinciples.polymorphism.ChildClass -up-|> oopPrinciples.polymorphism.ParentClass
  oopPrinciples.polymorphism.Train -up-|> oopPrinciples.polymorphism.Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
